--- a/style.css
+++ b/style.css
@@ -1,1 +1,72 @@
-@
+@charset "UTF-8";
+
+*{
+    margin: 0px;
+    padding: 0px;   
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body{
+    background-color: #998CB8;
+}
+
+h1{
+    color: #313131;   
+    font-size: 20px;
+    padding-top: 0;
+    
+}
+
+h2{
+    font-size: 3vw;
+    color: #111719;
+    
+}
+
+a{
+    color: #ffffff;
+    text-align: center;
+    text-decoration: none;
+    background-color: #726995;
+    width: 239px;
+    height: 61px;
+    display: block;
+
+}
+
+img{
+    width: 40vw;
+    height: auto;
+    display: block;
+}
+#descricao{
+    color: #221848;
+    font-size: 2vw;
+    font-weight: bold;
+}
+
+#card{
+    margin: 50px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 80px;
+    width: 60vw;
+    height: 80vw;
+    text-align: center;
+    background-color:#D9D9D9;
+}
+
+#conteudo_esquerda{
+    text-align: left;
+    padding-left: 20px;
+}
+
+#destaque{
+    color: #6C648D;
+}
+
+#descricao_tenis{
+    color: #111719;
+    font-size: 2vw;
+}
