--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 
 h1{
     color: #313131;   
-    font-size: 20px;
+    font-size: 5vw;
     padding-top: 0;
     
 }
@@ -20,18 +20,21 @@ h1{
 h2{
     font-size: 3vw;
     color: #111719;
-    
 }
 
-a{
-    color: #ffffff;
-    text-align: center;
-    text-decoration: none;
+#botao {
+    margin: 20px auto;
     background-color: #726995;
-    width: 239px;
-    height: 61px;
-    display: block;
-
+    width: 22vw;
+    height: 5vh;
+    display: flex;              /* Centraliza conteúdo */
+    align-items: center;        /* Alinha verticalmente */
+    justify-content: center;    /* Alinha horizontalmente */
+    border-radius: 9px;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 3vw;
 }
 
 img{
@@ -39,6 +42,7 @@ img{
     height: auto;
     display: block;
 }
+
 #descricao{
     color: #221848;
     font-size: 2vw;
@@ -51,15 +55,16 @@ img{
     align-items: center;
     flex-direction: column;
     padding-top: 80px;
-    width: 60vw;
-    height: 80vw;
+    height: 60vh auto;
+    width: 70vw auto;
     text-align: center;
     background-color:#D9D9D9;
+    border-radius: 20px;
 }
 
 #conteudo_esquerda{
     text-align: left;
-    padding-left: 20px;
+    padding-left: 3vw;
 }
 
 #destaque{
@@ -69,4 +74,11 @@ img{
 #descricao_tenis{
     color: #111719;
     font-size: 2vw;
+}
+
+.bolinhabranca{
+    background-color:#E0E1E5;
+    border-color:#545454;
+    width: 50%;    
+    height: 50%;
 }
