--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ h2{
     font-size: 3vw;
 }
 
+#botao:active {
+  transform: scale(0.95); 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
 img{
     width: 73vw;
     height: auto;
@@ -93,27 +97,26 @@ img{
 
 .branca{
     background-color: #E0E1E5;
-    border: 0.4vw solid #545454;
+    border: 0.3vw solid #545454;
 }
 
 .roxa{
     background-color: #A197BD;
-    border: 0.4vw solid #545454;
+    border: 0.2vw solid #545454;
 }
 
 .cinza{
     background-color: #67696B;
-    border: 0.4vw solid #545454;
+    border: 0.2vw solid #545454;
 }
 
 .preta{
     background-color: #161719;
-    border: 0.4vw solid #545454;
+    border: 0.2vw solid #545454;
 }
 
 .bolinha:hover{
-    opacity: 100%;
-    border: 2px solid #545454; 
+    opacity: 100%; 
     transform: scale(1.1) translate(-2px, -2px); 
     box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.600); 
     transition: transform .5s;
